--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rust-removie"
-version = "1.2.4"
+version = "1.3.0"
 authors = ["hedgar <hedgar2017@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-clap = "2.32.0"
-tokio = "0.1.7"
-tokio-process = "0.2.2"
+clap = "2.32"
+tokio = "0.1"
+tokio-process = "0.2"
